<?xml version="1.0"?>
<package format="2">
  <name>robot_localization_fusion</name>
  <version>1.0.0</version>
  <description>ROS1 package for fusing Odometry and IMU data using robot_localization</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robot_localization</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
